# local_data_client

./: .gitignore  Cargo.toml  Cross.toml  README.md  build-windows-force-cpp17.sh  build-windows.sh  collect-windows-dlls.sh  rebuild-windows.sh
src/: anomaly_detection.rs  api.rs  database.rs  main.rs
static/: app.js  index.html
